new kaiops/kaiops/infrastructure/kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaiops-web
  namespace: kaiops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kaiops-web
  template:
    metadata:
      labels:
        app: kaiops-web
    spec:
      containers:
        - name: web
          image: kaiops/web:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: kaiops-web
  namespace: kaiops
spec:
  selector:
    app: kaiops-web
  ports:
    - port: 80
      targetPort: 3000
